# up2date-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README-vscode.md  README.md  annotated.html  annotated_dup.js  classes.html  dir_09a17229e7120a6112bd8e0acf62e8df.html  dir_09a17229e7120a6112bd8e0acf62e8df.js  dir_0c919bd60397350f6bbac15689d65df3.html  dir_0c919bd60397350f6bbac15689d65df3.js  dir_3763a383383b475f62294ec68683581a.html  dir_3763a383383b475f62294ec68683581a.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_e2445d39b11c7056d54e8948d9093fa0.html  dir_e2445d39b11c7056d54e8948d9093fa0.js  dir_eced6c16f72209ac8b389519c6d271d5.html  dir_eced6c16f72209ac8b389519c6d271d5.js  files.html  files_dup.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  gen_cert.sh  hierarchy.html  hierarchy.js  index.html  menudata.js  mkconfig.sh  namespacemembers.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: Dockerfile_builder  build.sh
.github/workflows/: ci.yaml  scorecards.yml
cert/: README.md
d0/d0c/: classritms_1_1dps_1_1provisioning__error-members.html
d0/d20/: structddi_1_1_hashes-members.html
d0/ddb/: classddi_1_1client__initialize__error.html  classddi_1_1client__initialize__error.js
d1/d35/: classddi_1_1_client.html  classddi_1_1_client.js
d1/d4a/: classddi_1_1_auth_error_handler.html  classddi_1_1_auth_error_handler.js
d1/d68/: namespaceritms_1_1dps.html  namespaceritms_1_1dps.js
d2/d12/: classddi_1_1_client-members.html
d2/d15/: classritms_1_1dps_1_1httplib__error-members.html
d2/d4f/: classddi_1_1_d_d_i_client_builder.html  classddi_1_1_d_d_i_client_builder.js
d2/d56/: classritms_1_1dps_1_1m_t_l_s_key_pair-members.html
d2/d5b/: classddi_1_1_auth_error_handler-members.html
d2/dd8/: classddi_1_1wrong__response-members.html
d2/de6/: classddi_1_1client__initialize__error-members.html
d3/d08/: ritms__exceptions_8hpp.html  ritms__exceptions_8hpp.js  ritms__exceptions_8hpp_source.html
d3/d26/: classddi_1_1_response.html  classddi_1_1_response.js
d3/d4b/: classddi_1_1unexpected__payload-members.html
d3/d9c/: classritms_1_1dps_1_1_cloud_provisioning_client_builder.html  classritms_1_1dps_1_1_cloud_provisioning_client_builder.js
d3/dfc/: classritms_1_1dps_1_1_cloud_provisioning_client_builder-members.html
d4/d1d/: ddi_module.html
d4/d2f/: classddi_1_1http__unexpected__code__exception-members.html
d4/d33/: classddi_1_1_config_response_builder.html  classddi_1_1_config_response_builder.js
d4/d96/: classritms_1_1dps_1_1httplib__error.html  classritms_1_1dps_1_1httplib__error.js
d4/da1/: classddi_1_1_response_delivery_listener-members.html
d4/dfe/: classddi_1_1_auth_restore_handler-members.html
d5/d3f/: classritms_1_1dps_1_1up2date__cloud__error.html  classritms_1_1dps_1_1up2date__cloud__error.js
d5/d4d/: mainpage_8dox.html
d5/de0/: classddi_1_1_artifact.html  classddi_1_1_artifact.js
d6/d3e/: classritms_1_1dps_1_1_provisioning_client-members.html
d6/dac/: structddi_1_1_hashes.html  structddi_1_1_hashes.js
d6/dbb/: classddi_1_1unauthorized__exception-members.html
d7/d08/: classddi_1_1http__lib__error-members.html
d7/d0b/: classddi_1_1_response_builder.html  classddi_1_1_response_builder.js
d7/d14/: classritms_1_1dps_1_1_provisioning_client.html  classritms_1_1dps_1_1_provisioning_client.js
d7/d46/: classddi_1_1_cancel_action-members.html
ddi/: CMakeLists.txt
ddi/include/: ddi.hpp
ddi/include/ddi/: ddi_client.hpp  hawkbit_actions.hpp  hawkbit_event_handler.hpp  hawkbit_exceptions.hpp  hawkbit_response.hpp
ddi/src/: acions_impl.cpp  actions_impl.hpp  ddi_client_builder.cpp  ddi_client_impl.cpp  ddi_client_impl.hpp  hawkbit_response.cpp  response_impl.cpp  response_impl.hpp  utils.cpp  utils.hpp
docs/: mainpage.dox
dps/: CMakeLists.txt
dps/include/: ritms_dps.hpp  ritms_exceptions.hpp  ritms_token_exchanger.hpp
dps/src/: provisioning_client_impl.cpp  ritms_dps_impl.cpp  ritms_dps_impl.hpp  ritms_token_exchanger_impl.cpp  ritms_token_exchanger_impl.hpp
example/: CMakeLists.txt  Dockerfile  Dockerfile_ritms_auth  Dockerfile_ritms_ott  Dockerfile_up2date_client  README.md  main.cpp
example/ritms_auth/: CMakeLists.txt  main.cpp
example/up2date_client/: CMakeLists.txt  main.cpp
hawkbit/: CMakeLists.txt
hawkbit/include/: hawkbit.hpp
hawkbit/include/hawkbit/: exceptions.hpp  hawkbit_actions.hpp  hawkbit_client.hpp  hawkbit_event_handler.hpp  hawkbit_exceptions.hpp  hawkbit_response.hpp
hawkbit/src/: acions_impl.cpp  actions_impl.hpp  client_builder_impl.cpp  default_client_builder.cpp  hawkbit_client_impl.cpp  hawkbit_client_impl.hpp  hawkbit_response.cpp  provisioning_client_impl.cpp  provisioning_client_impl.hpp  response_impl.cpp  response_impl.hpp  uriparse.cpp  utils.cpp  utils.hpp
modules/: CMakeLists.txt
modules/include/: httpclient.hpp  httpclient_def.h  httplib.h  uriparse.hpp
modules/src/: httpclient_impl.cpp  httpclient_impl.hpp  httplib.h  uriparse.cpp
modules/src/esp32/: CMakeLists.txt
modules/src/unix/: CMakeLists.txt  httpclient_impl.cpp  httplib.cpp  httplib.h
modules/src/win/: CMakeLists.txt  converters.c  converters.h  httpclient_impl.cpp  httpclient_impl.hpp  win_http.c  win_http.h
modules/src/win_openssl/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  (+25 more)
wrapperdll/: .gitignore  CMakeLists.txt  CallbackDispatcher.cpp  CallbackDispatcher.hpp  DPSInfoReloadHandler.hpp  ddiclient.cpp  ddiclient.h
(+69 files in other folders)
